@@ -69,13 +69,27 @@ class Peak_Controller_Front
 	public function preDispatch() {	}
 
 	/**
-	 * Start dispatching to controller with the help of router
-	 * 
-	 * @param string $default_ctrl Controller called by default when no request
+	 * Call appropriate dispatching methods
 	 */
 	public function dispatch()
 	{
-		$router = Peak_Registry::o()->router;      
+	    $this->_dispatchController();
+	    
+	    if($this->controller instanceof Peak_Application_Modules) {
+        	$this->_dispatchModule();
+        }               
+        // execute a normal controller action
+        elseif($this->controller instanceof Peak_Controller_Action) {
+        	$this->_dispatchControllerAction(); 
+        }
+	}
+	
+	/**
+	 * Dispatch appropriate controller according to the router
+	 */
+	protected function _dispatchController()
+	{
+	    $router = Peak_Registry::o()->router;      
 		
 		//set default controller if router doesn't have one
 		if(!isset($router->controller)) {
@@ -96,22 +110,24 @@ class Peak_Controller_Front
 			else throw new Peak_Exception('ERR_APP_CTRL_NOT_FOUND', $ctrl_name);
 		}
 		else $this->controller = new $ctrl_name();
- 
-        //if class if is an instance of Peak_Application_Modules, load a module app via a controller
-        if($this->controller instanceof Peak_Application_Modules) 
-        {
-        	Peak_Registry::o()->app->module = $this->controller;
-        	$this->controller->run();
-        }               
-        // execute a normal controller action
-        elseif($this->controller instanceof Peak_Controller_Action) {
-        	$this->controller->handleAction();
-        	$this->postDispatch();  
-        }       
-        else {
-        	//need something
-        	//class is neither a module or a controller
-        }
+	}
+	
+	/**
+	 * Dispatch action of controller
+	 */
+	protected function _dispatchControllerAction()
+	{
+	    $this->controller->handleAction();
+        $this->postDispatch(); 
+	}
+	
+	/**
+	 * Dispatch a module and run it
+	 */
+	protected function _dispatchModule()
+	{
+	    Peak_Registry::o()->app->module = $this->controller;
+        $this->controller->run();
 	}
 	
 	/**
@@ -135,11 +151,19 @@ class Peak_Controller_Front
 	 */
 	public function errorDispatch($exception = null)
 	{
-		$this->forceDispatch($this->error_controller);
+		//$this->forceDispatch($this->error_controller);
+		
+		$router = Peak_Registry::o()->router;
+		$router->controller = $this->error_controller;
+		$router->action     = 'index';
+		
+		$this->_dispatchController();
 
         if(($this->controller instanceof Peak_Controller_Action) && (isset($exception))) {
             $this->controller->exception = $exception;
         }
+        
+        $this->_dispatchControllerAction();
 	}
 
     /**
